tests/NormalTests/paczka1/fuzzy1/81734095.err
Error in line 5: A874 S190 47,1
Error in line 18: GcUxtQ S190 46,5
Error in line 11: NhfRaE A658 25,2
Error in line 22: GcUxtQ A874 83,8
Error in line 31: ILkfn A874 40,J
Error in line 26: ILkfn S190 49,0
Error in line 33: A874 S853 88,8
